static/css/site.css
body {
  margin: 0 auto 4ex auto;
  max-width: 31em;

  text-align: justify;
  text-justify: inter-word;
  word-wrap: break-word;
  hyphens: auto;

  color: black;

  line-height: 1.5;

  font-size: 1.333em;
  font-family: 'EBG12-Re', 'FreeSerif', 'Fallback', serif;

  font-variant-numeric: oldstyle-nums;
  font-feature-settings: 'onum';
  -moz-font-feature-settings: 'onum';
  -ms-font-feature-settings: 'onum';
  -o-font-feature-settings: 'onum';
  -webkit-font-feature-settings: 'onum';

  font-feature-settings: "dlig";
  -moz-font-feature-settings: "dlig";
  -ms-font-feature-settings: "dlig";
  -o-font-feature-settings: "dlig";
  -webkit-font-feature-settings: "dlig";

  font-feature-settings: "calt";
  -moz-font-feature-settings: "calt";
  -ms-font-feature-settings: "calt";
  -o-font-feature-settings: "calt";
  -webkit-font-feature-settings: "calt";
}

a {
  color: black;
  text-decoration: underline dotted #c0c0c0;
}

a:hover, a:focus {
  color: #23527c;
}

#site_title {
  color: #df2020;
  font-weight: normal;
/*  font-size: 2.5em; */
  line-height: 1.1;
  text-align: center;

  font-size: 2em;
  font-feature-settings: "smcp";
  -moz-font-feature-settings: "smcp";
  -ms-font-feature-settings: "smcp";
  -o-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";

  margin-top: 3ex;
}

#site_title a {
  color: #df2020;
  text-decoration: none;
}

#head_nav {
  text-align: center;
}

#head_nav ul.mhlist li:before {
  margin: 0 0.5em;
}

#copyright {
  font-size: 0.8em;
  float: left;
}

#foot_nav {
  text-align: center;
}

#foot_nav ul.mhlist {
  display: inline;
}

#foot_nav ul.mhlist li:before {
  margin: 0 0.5em;
}

.aldus {
  text-align: center;
  margin: 1em auto;
}

.sc {
  font-feature-settings: "smcp";
  -moz-font-feature-settings: "smcp";
  -ms-font-feature-settings: "smcp";
  -o-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";
}

.cp_name {
  text-transform: lowercase;
}

#flashes {
  color: white;
  background-color: black;
  padding: 5pt 10pt;
  border-radius: 0 0 5pt 5pt;
}

.closebutton {
  float: right;

	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
	background-color:#ededed;
	-webkit-border-top-left-radius:20px;
	-moz-border-radius-topleft:20px;
	border-top-left-radius:20px;
	-webkit-border-top-right-radius:20px;
	-moz-border-radius-topright:20px;
	border-top-right-radius:20px;
	-webkit-border-bottom-right-radius:20px;
	-moz-border-radius-bottomright:20px;
	border-bottom-right-radius:20px;
	-webkit-border-bottom-left-radius:20px;
	-moz-border-radius-bottomleft:20px;
	border-bottom-left-radius:20px;
	text-indent:0.24px;
	border:1px solid #dcdcdc;
	display:inline-block;
	color:#777777;
	font-family:Arial;
	font-size:15px;
	font-weight:bold;
	font-style:normal;
	height:20px;
	line-height:20px;
	width:20px;
	text-decoration:none;
	text-align:center;
	text-shadow:1px 1px 0px #ffffff;
}

.closebutton:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
	background-color:#dfdfdf;
}

.closebutton:active {
	position: relative;
	top: 1px;
}

/*
 * Horizontal unnumbered list
 */

ul.hlist {
  padding: 0;
}

ul.hlist li {
  display: inline;
}

/*
 *  Mid-dot separated horizontal unnumbered list
 */

ul.mhlist {
  padding: 0;
}

ul.mhlist li {
  display: inline;
}

ul.mhlist li:before {
  content: ' · ';
}

ul.mhlist li:first-child:before {
  content: '';
}

/*
 * CNF, VNF, bib display
 */

.nym {
  font-weight: bold;
}

.name {
  font-style: italic;
}

.gen {
  font-style: italic;
}

.dim {
  font-size: 0.875em;
}

.bib_key {
/*
  font-feature-settings: "smcp";
  -moz-font-feature-settings: "smcp";
  -ms-font-feature-settings: "smcp";
  -o-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";
*/
/*  font-style: italic; */
}

dd {
/*  margin-left: 1.5em; */
}

#citeme {
  font-size: 0.8em;
  border-top: 1pt solid;
  padding-top: 0.5em;
}

#citeme > cite {
  font-style: normal;
}

/*
 *  CNF index
 */

.index_nav {
  text-align: center;
  letter-spacing: -0.25pt;
}

p.index_letter {
  clear: both;
  margin: 1.5em auto;
  overflow: auto;

/*  -moz-column-count: 5; */
}

p.index_letter:first-letter {
  float: left;
  font-size: 3.4em;
  color: #df2020;
  margin: 0.055em 7.5pt 0 0;
}

a.letter_anchor {
  position: relative;
  top: -1em;
}

/* p.index::first-letter { initial-letter: 2 2; } */

/*
 * Masthead
 */

.masthead {
  margin: 1em 0;
  border: 1px solid black;
  font-size: 0.8em;
}

.masthead table {
  border-collapse: separate;
  border-spacing: 1em;
}

.masthead td {
  vertical-align: top;
}

.masthead td.mast_left {
  text-align: right;
  text-transform: lowercase;
  width: 35%;
}

.masthead td.mast_right {
  text-align: left;
  width: 65%;
}

/*
 * Media
 */

.follow {
  text-align: center;
}

.follow img {
  width: 3em;
  height: 3em;
  margin: 0 0.25em;
}

/*
 * TeX, LaTeX logos
 *
 * http://edward.oconnor.cx/2007/08/tex-poshlet
 *
 * <span class="tex">T<sub>e</sub>X</span>
 * <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
 */

.tex sub, .latex sub, .latex sup {
  text-transform: uppercase;
}

.tex sub, .latex sub {
  vertical-align: -0.5ex;
  margin-left: -0.1667em;
  margin-right: -0.125em;
}

.tex, .latex, .tex sub, .latex sub {
  font-size: 1em;
}

.latex sup {
  font-size: 0.85em;
  vertical-align: 0.15em;
  margin-left: -0.36em;
  margin-right: -0.15em;
}

